# internal/infrastructure/repository/repository.go
@@ -4,6 +4,7 @@ import (
 	"context"
 	"database/sql"
 	"errors"
+	"log/slog"
 
 	"github.com/google/uuid"
 	"github.com/jackc/pgx/v5/pgconn"
@@ -200,7 +201,7 @@ func (r *repo) GetAllPvzs(ctx context.Context) ([]*domain.Pvz, error) {
 	return pvzs, nil
 }
 
-func (r *repo) GetUserByEmail(ctx context.Context, email string) (*auth.User, error) {
+func (r *repo) UserByEmail(ctx context.Context, email string) (*auth.User, error) {
 	op := "repository.GetUserByEmail"
 
 	u := new(auth.User)
@@ -245,18 +246,14 @@ func (r *repo) CreateUser(ctx context.Context, user *auth.User) (*auth.User, err
 	return user, nil
 }
 
-func (r *repo) SaveRefreshToken(
-	ctx context.Context,
-	rToken *auth.RefreshToken,
-	fp string,
-) error {
+func (r *repo) SaveRefreshToken(ctx context.Context, rToken *auth.RefreshToken) error {
 	op := "repository.SaveRefreshToken"
 
 	_, err := r.db.ExecContext(
 		ctx,
 		string(insertRefreshTokenQuery),
-		rToken.PwdHash(),
-		fp,
+		rToken.TokenHash,
+		rToken.Fingerprint,
 		rToken.UserID,
 		rToken.UserAgent,
 		rToken.IP,
@@ -265,6 +262,96 @@ func (r *repo) SaveRefreshToken(
 	)
 	if err != nil {
 		return xerr.WrapErr(op, pRepo.Unexpected, err)
+	}
+
+	return nil
+}
+
+func (r *repo) UserRoleAndRefreshToken(ctx context.Context, tokenHash []byte) (*auth.UserRoleAndRToken, error) {
+	op := "repository.UserRoleAndRefreshToken"
+
+	urt := &auth.UserRoleAndRToken{
+		RToken: new(auth.RefreshToken),
+	}
+
+	err := r.db.QueryRowContext(
+		ctx,
+		string(getRefreshTokenByHashQuery),
+		tokenHash).
+		Scan(
+			&urt.Role,
+			&urt.RToken.Fingerprint,
+			&urt.RToken.UserID,
+			&urt.RToken.UserAgent,
+			&urt.RToken.IP,
+			&urt.RToken.CreatedAt,
+			&urt.RToken.ExpiresAt,
+			&urt.RToken.Revoked,
+		)
+	if err != nil {
+		if err == sql.ErrNoRows {
+			return nil, xerr.WrapErr(op, pRepo.NotFound, err)
+		}
+		return nil, xerr.WrapErr(op, pRepo.Unexpected, err)
+	}
+
+	urt.RToken.TokenHash = tokenHash
+	return urt, nil
+}
+
+func (r *repo) UpdateUserRefreshToken(ctx context.Context, usedHash []byte, rToken *auth.RefreshToken) error {
+	op := "repository.UpdateUserRefreshToken"
+	l := logger.FromCtx(ctx)
+
+	tx, err := r.db.BeginTx(ctx, &sql.TxOptions{Isolation: sql.LevelReadCommitted})
+	if err != nil {
+		return xerr.WrapErr(op, pRepo.Unexpected, err)
+	}
+	defer func() {
+		err = r.FinishTx(tx, &err, l)
+	}()
+
+	_, err = tx.ExecContext(ctx, string(revokeOldRefreshTokenQuery), usedHash)
+	if err != nil {
+		return xerr.WrapErr(op, pRepo.Unexpected, err)
+	}
+
+	_, err = tx.ExecContext(
+		ctx,
+		string(insertRefreshTokenQuery),
+		rToken.TokenHash,
+		rToken.Fingerprint,
+		rToken.UserID,
+		rToken.UserAgent,
+		rToken.IP,
+		rToken.CreatedAt,
+		rToken.ExpiresAt,
+	)
+	if err != nil {
+		return xerr.WrapErr(op, pRepo.Unexpected, err)
+	}
+
+	return nil
+}
+
+func (r *repo) FinishTx(tx *sql.Tx, err *error, l *slog.Logger) error {
+	op := "repository.FinishTx"
+
+	if *err != nil {
+		if rollbackErr := tx.Rollback(); rollbackErr != nil {
+			l.Error(
+				"transaction rollback failed",
+				slog.String("original_error", (*err).Error()),
+				slog.String("rollback_error", rollbackErr.Error()),
+			)
+			return xerr.WrapErr(op, pRepo.TxRollbackFailed, *err)
+		}
+		return *err
+	}
+
+	if commitErr := tx.Commit(); commitErr != nil {
+		l.Error("transaction commit failed", logger.WithErr(commitErr))
+		return xerr.WrapErr(op, pRepo.Unexpected, commitErr)
 	}
 
 	return nil
